Overflow Fixed On Sign In And Register Page

--- a/Chatroom/wwwroot/css/register.css
+++ b/Chatroom/wwwroot/css/register.css
@@ -4,6 +4,7 @@
     flex-direction: column;
     align-items: center;
     margin-bottom: 50px;
+    overflow-y: auto;
 }
 
 .register-container {
